--- a/_posts/2016-03-21-MCMC(1)-Bayes.markdown
+++ b/_posts/2016-03-21-MCMC(1)-Bayes.markdown
@@ -16,18 +16,32 @@ excerpt: MCMC方法介绍
 现代贝叶斯统计学的复兴肇始于Jeffreys(1939)，从1950年代开始，经过众多统计学家的努力，贝叶斯统计学逐渐发展壮大，并发展出了贝叶斯统计决策理论这个新分支。特别到1990年代以后，随着计算方法MCMC在贝叶斯统计领域的广泛应用，解决了贝叶斯统计学长期存在的计算困难的问题，贝叶斯统计学这才迎来了它的春天。
 
 ---
-### (2)条件概率
 
+### (2)条件概率
+由于$$$P(A\cap B)=P(A|B)P(B)=P(B|A)P(A)$$$，故而有条件概率公式:
+
+$$P(A|B)= {P(A\cap B)\over P(B)}={P(B|A)P(A)\over P(B)}$$
 
 ---
 
 ### (3)全概率公式
-我也不知道
+假设事件$$$A$$$和$$$A'$$$共同构成了样本空间，那么就有
+$$P(B)=P(B \cap A)+P(B \cap A')$$
+而通过上一节的推倒，我们有
+$$P(B \cap A)=P(B|A)P(A)$$
+所以，
+$$P(B)=P(B|A)P(A)+P(B|A')P(A')$$
+这就是全概率公式。
+
+将这个公式带入上一节的条件概率公式，就得到条件概率的另一种写法：
+$$P(A|B)={P(B|A)P(A)\over P(B|A)P(A)+P(B|A')P(A')}$$
 
 ---
+
 ### (4)贝叶斯定理
 
 ---
+
 ### (5)贝叶斯推断
 
 ---
