--- a/_posts/2016-03-21-MCMC(1)-Bayes.markdown
+++ b/_posts/2016-03-21-MCMC(1)-Bayes.markdown
@@ -18,22 +18,29 @@ excerpt: MCMC方法介绍
 ---
 
 ### (2)条件概率
-由于$$$P(A\cap B)=P(A|B)P(B)=P(B|A)P(A)$$$，故而有条件概率公式:
+由于$$P(A\cap B)=P(A|B)P(B)=P(B|A)P(A)$$，故而有条件概率公式:
 
 $$P(A|B)= {P(A\cap B)\over P(B)}={P(B|A)P(A)\over P(B)}$$
 
 ---
 
 ### (3)全概率公式
-假设事件$$$A$$$和$$$A'$$$共同构成了样本空间，那么就有
+假设事件$$A$$和$$A'$$共同构成了样本空间，那么就有
+
 $$P(B)=P(B \cap A)+P(B \cap A')$$
-而通过上一节的推倒，我们有
-$$P(B \cap A)=P(B|A)P(A)$$
-所以，
-$$P(B)=P(B|A)P(A)+P(B|A')P(A')$$
+
+而通过上一节的推倒，我们有 
+
+$$P(B \cap A)=P(B|A)P(A)$$ 
+
+所以， 
+
+$$P(B)=P(B|A)P(A)+P(B|A')P(A')$$ 
+
 这就是全概率公式。
 
 将这个公式带入上一节的条件概率公式，就得到条件概率的另一种写法：
+
 $$P(A|B)={P(B|A)P(A)\over P(B|A)P(A)+P(B|A')P(A')}$$
 
 ---
