--- a/_posts/2016-03-21-MCMC(1)-Bayes.markdown
+++ b/_posts/2016-03-21-MCMC(1)-Bayes.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "MCMC方法(一):贝叶斯统计"
+title:  "MCMC方法(一):贝叶斯推断"
 date:   2016-03-19 22:08:54
 author: CaoXiaoqing
 categories: MCMC
@@ -17,8 +17,8 @@ excerpt: MCMC方法介绍
 
 ---
 
-### (2)条件概率
-由于$$P(A\cap B)=P(A|B)P(B)=P(B|A)P(A)$$，故而有条件概率公式:
+### (2)条件概率和贝叶斯公式
+由于$$P(A\cap B)=P(A|B)P(B)=P(B|A)P(A)$$，故而有贝叶斯公式:
 
 $$P(A|B)= {P(A\cap B)\over P(B)}={P(B|A)P(A)\over P(B)}$$
 
@@ -39,16 +39,13 @@ $$P(B)=P(B|A)P(A)+P(B|A')P(A')$$
 
 这就是全概率公式。
 
-将这个公式带入上一节的条件概率公式，就得到条件概率的另一种写法：
+将这个公式带入上一节的贝叶斯公式，就得到贝叶斯公式的另一种写法：
 
 $$P(A|B)={P(B|A)P(A)\over P(B|A)P(A)+P(B|A')P(A')}$$
 
 ---
 
-### (4)贝叶斯定理
-
----
-
-### (5)贝叶斯推断
+### (4)贝叶斯推断
+上面介绍的就是贝叶斯公式的最简单表达了，复杂的无非也就是求和换成积分，原理都是一样的。通常将$$P(A|B)$$称为后验概率(posterior probability)，将$$P(A)$$称为先验概率(prior probability)，将$$P(B|A)P(B)$$称为可能性函数(likelyhood function)。
 
 ---
