--- a/_posts/2016-03-21-MCMC(1)-Bayes.markdown
+++ b/_posts/2016-03-21-MCMC(1)-Bayes.markdown
@@ -29,7 +29,7 @@ $$P(A|B)= {P(A\cap B)\over P(B)}={P(B|A)P(A)\over P(B)}$$
 
 $$P(B)=P(B \cap A)+P(B \cap A')$$
 
-而通过上一节的推倒，我们有 
+而通过上一节的推导，我们有 
 
 $$P(B \cap A)=P(B|A)P(A)$$ 
 
