--- a/_posts/意识诞生于上帝沉默时.md
+++ b/_posts/意识诞生于上帝沉默时.md
@@ -4,7 +4,7 @@ title:  "意识诞生于上帝沉默时"
 date:   2017-12-18 22:08:54
 author: CaoXiaoqing
 categories: 算法
-excerpt: 矩阵求导方法介绍
+excerpt: 意识诞生于上帝沉默时
 ---
 
 # 意识诞生于上帝沉默时
