--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -12,11 +12,11 @@ excerpt: SVRG论文阅读笔记
 * content
 {:toc}
 
-## 1. 八卦
+## 1. 背景故事
 
-Full Gradient (FG) 的方法可以追溯到 Cauchy 1847 年的论文 [[1]][1]。对于凸函数，FG 的 convergence rate 是次线性收敛 $$O(1/T)$$，强凸函数可以达到线性收敛 $$O(\rho^T)$$ ，其中 $$0<\rho<1$$。
+Full Gradient (FG) 的方法可以追溯到 Cauchy 1847 年的论文 [[1]](#cauchy)。对于凸函数，FG 的 convergence rate 是次线性收敛 $$O(1/T)$$，强凸函数可以达到线性收敛 $$O(\rho^T)$$ ，其中 $$0<\rho<1$$。
 
-- Stochastic Gradient Descent (SGD) 于1951和1952年在文献[15，16]中提出。SGD 随机选择一个 fitfit 来作为梯度的近似 （R(x)≡0R(x)≡0 ），然后更新 xt=xt−1−ηt∇fit(xt−1)xt=xt−1−ηt∇fit(xt−1)。 步长 ηtηt 需要在 步长tt 无穷大的时候趋近于0。 SGD 的 convergence rate 是 O(1/t√)O(1/t)。 [15] 中证明了只要 ηtηt 满足如下的条件：
+Stochastic Gradient Descent (SGD) 于 1951 和 1952 年在文献 [15，16] 中提出。SGD 随机选择一个 fitfit 来作为梯度的近似 （R(x)≡0R(x)≡0 ），然后更新 xt=xt−1−ηt∇fit(xt−1)xt=xt−1−ηt∇fit(xt−1)。 步长 ηtηt 需要在 步长tt 无穷大的时候趋近于0。 SGD 的 convergence rate 是 O(1/t√)O(1/t)。 [15] 中证明了只要 ηtηt 满足如下的条件：
 
 ∑tηt=∞ and  ∑tη2t<∞∑tηt=∞ and  ∑tηt2<∞
 
@@ -32,7 +32,7 @@ SGD就可以收敛。SGD 每次迭代的时间和空间的复杂度都是 O(d)O(
 
 SGD每次迭代的时候均匀随机得选择一个样本或者mini-batch做更新：
 
-相对于梯度下降，SGD的好处非常明显，就是可以减少每次更新的计算代价，但是SGD带来的问题是收敛速度不如梯度下降（收敛速度是衡量优化算法计算复杂度的基本工具，具体定义可以参考 [wiki/Rate_of_convergence](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者其他优化相关的教材），也就是说为了达到同样的精度，SGD需要的总迭代次数要大于梯度下降，但是，单次迭代的计算量要小得多。从收敛速度分析上看，SGD能够在目标函数强凸并且递减步长的情况下做到 $O(1/T)$的次线性收敛（sublinear convergence），而梯度下降则可以在目标函数强凸的情况下做到$O(\rho^T) (\rho<1)$的线性收敛（linear convergence）。总结起来就是，如果想快速得到一个可以勉强接受的解，SGD比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。关于收敛速度可看[这里](https://zhuanlan.zhihu.com/p/27644403)。
+相对于梯度下降，SGD的好处非常明显，就是可以减少每次更新的计算代价，但是SGD带来的问题是收敛速度不如梯度下降（收敛速度是衡量优化算法计算复杂度的基本工具，具体定义可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者其他优化相关的教材），也就是说为了达到同样的精度，SGD需要的总迭代次数要大于梯度下降，但是，单次迭代的计算量要小得多。从收敛速度分析上看，SGD能够在目标函数强凸并且递减步长的情况下做到 $O(1/T)$的次线性收敛（sublinear convergence），而梯度下降则可以在目标函数强凸的情况下做到$O(\rho^T) (\rho<1)$的线性收敛（linear convergence）。总结起来就是，如果想快速得到一个可以勉强接受的解，SGD比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。关于收敛速度可看[这里](https://zhuanlan.zhihu.com/p/27644403)。
 
 SGD后来后来也衍生出了非常多的变种，尤其是一类分析regret的online算法，包括Adagrad、Dual Averaging、FTRL等。但是，始终学术界对于SGD还有一种期待，就是：是否可以把SGD做到和梯度下降一样的线性收敛。直到2012和2013年，SAG[1]与SVRG[2]算法发表在NIPS上，**成为近几年SGD类算法的最大突破**。
 
@@ -64,7 +64,4 @@ SVRG的算法思路是，每过一段时间计算一次所有样本的梯度![\t
 
 [3]Defazio, Aaron, Francis Bach, and Simon Lacoste-Julien. "Saga: A fast incremental gradient method with support for non-strongly convex composite objectives." *Advances in Neural Information Processing Systems*. 2014.
 
-
-
-[1]: http://example.com/  "Optional Title Here"
-
+<span id="cauchy">here</span>
