--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -7,36 +7,34 @@ categories: 算法
 excerpt: SVRG论文阅读笔记
 ---
 
-​	本文对 SVRG 算法做了一个简单的介绍。
+​	 最佳拜读了下大名鼎鼎的 SVRG 算法，本文做个简单的阅读笔记，并描述了如何将 SVRG 算法改造成一种在线算法，当然我这里不保证改造后算法的各种理论性质。
 
 * content
 {:toc}
 
-## 1. 背景故事
+## 1. background
 
-Full Gradient (FG) 的方法可以追溯到 Cauchy 1847 年的论文 [[1]](#cauchy)。对于凸函数，FG 的 convergence rate 是次线性收敛 $$O(1/T)$$，强凸函数可以达到线性收敛 $$O(\rho^T)$$ ，其中 $$0<\rho<1$$。
+考虑优化问题：
+$$
+min \, F(w)=\frac{1}{n}\sum_{i=1}^{n}f_i(w)
+$$
+当我们采用 Full Gradient (FG) 的方法时，$$w$$ 的更新公式是：
+$$
+w^{(t)}=w^{(t-1)}-\eta_t\nabla F(w^{(t-1)})=w^{(t-1)}-\frac{\eta_t}{n}\sum_{i=1}^{n}\nabla f_{i}(w^{(t-1)})
+$$
+Full Gradient (FG) 的方法可以追溯到 Cauchy 1847 年的论文 [[1]](#Reference)。对于凸函数，FG 是次线性收敛 $$O(1/T)$$，对强凸函数可以达到线性收敛 $$O(\rho^T)$$ ，其中 $$0<\rho<1$$（收敛速度是衡量优化算法计算复杂度的基本工具，可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者 [这里](https://zhuanlan.zhihu.com/p/27644403)）。梯度下降对于样本数目比较多的时候有一个很大的劣势，那就是每次需要求解所有样本的梯度，样本数多的时候，导致计算量大增，所以实际生产环境中，往往采用随机梯度下降算法（Stochastic Gradient Descent），一般简写做 SGD，它于 1951 和 1952 年在文献 [15，16] 中被提出。SGD 每次迭代的时候均匀随机得选择一个样本或者 mini-batch 做更新。当我们采用 SGD 方法来进行计算的时候，$$w$$ 的更新公式是
+$$
+w^{(t)}=w^{(t-1)}-\eta_t\nabla f_{i_t}(w^{(t-1)})
+$$
+相对于梯度下降，SGD 的好处非常明显，就是可以减少每次更新的计算代价，但是 SGD 带来的问题是收敛速度不如梯度下降，也就是说为了达到同样的精度，SGD 需要的总迭代次数要大于梯度下降，但是，单次迭代的计算量要小得多。从收敛速度分析上看，SGD 能够在目标函数强凸并且递减步长的情况下做到 $O(1/T)$ 的次线性收敛（sublinear convergence），而梯度下降则可以在目标函数强凸的情况下做到 $O(\rho^T) (\rho<1)$ 的线性收敛（linear convergence）。总结起来就是，如果想快速得到一个可以勉强接受的解，SGD 比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。
 
-Stochastic Gradient Descent (SGD) 于 1951 和 1952 年在文献 [15，16] 中提出。SGD 随机选择一个 fitfit 来作为梯度的近似 （R(x)≡0R(x)≡0 ），然后更新 xt=xt−1−ηt∇fit(xt−1)xt=xt−1−ηt∇fit(xt−1)。 步长 ηtηt 需要在 步长tt 无穷大的时候趋近于0。 SGD 的 convergence rate 是 O(1/t√)O(1/t)。 [15] 中证明了只要 ηtηt 满足如下的条件：
-
-∑tηt=∞ and  ∑tη2t<∞∑tηt=∞ and  ∑tηt2<∞
-
-SGD就可以收敛。SGD 每次迭代的时间和空间的复杂度都是 O(d)O(d).
+SGD 后来衍生出了非常多的变种，尤其是一类分析 regret 的 online 算法，包括 Adagrad、Dual Averaging、FTRL 等。但是，始终学术界对于 SGD 还有一种期待，就是是否可以把 SGD 做到和梯度下降一样的线性收敛。直到 2012 和 2013 年，SAG[1] 与 SVRG[2] 算法发表在 NIPS 上，**成为近几年 SGD 类算法的最大突破**。
 
 
 
-## 2. SGD
+## 2. SAG and SDCA
 
-
-
-梯度下降对于样本数目比较多的时候有一个很大的劣势，那就是每次需要求解所有样本的梯度，样本数多的时候，导致计算量大增，所以实际生产环境中，往往采用随机梯度下降算法（Stochastic Gradient Descent），一般简写做SGD。
-
-SGD每次迭代的时候均匀随机得选择一个样本或者mini-batch做更新：
-
-相对于梯度下降，SGD的好处非常明显，就是可以减少每次更新的计算代价，但是SGD带来的问题是收敛速度不如梯度下降（收敛速度是衡量优化算法计算复杂度的基本工具，具体定义可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者其他优化相关的教材），也就是说为了达到同样的精度，SGD需要的总迭代次数要大于梯度下降，但是，单次迭代的计算量要小得多。从收敛速度分析上看，SGD能够在目标函数强凸并且递减步长的情况下做到 $O(1/T)$的次线性收敛（sublinear convergence），而梯度下降则可以在目标函数强凸的情况下做到$O(\rho^T) (\rho<1)$的线性收敛（linear convergence）。总结起来就是，如果想快速得到一个可以勉强接受的解，SGD比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。关于收敛速度可看[这里](https://zhuanlan.zhihu.com/p/27644403)。
-
-SGD后来后来也衍生出了非常多的变种，尤其是一类分析regret的online算法，包括Adagrad、Dual Averaging、FTRL等。但是，始终学术界对于SGD还有一种期待，就是：是否可以把SGD做到和梯度下降一样的线性收敛。直到2012和2013年，SAG[1]与SVRG[2]算法发表在NIPS上，**成为近几年SGD类算法的最大突破**。
-
-## 3. SAG
+由于影响 SGD 收敛的主要原因是
 
 SAG算法在内存中为每个样本都维护一个旧的梯度 $$y_i$$，随机选择一个样本$i$来更新$d$来更新参数$x$。具体得说，更新的项![d](https://www.zhihu.com/equation?tex=d)来自于用新的梯度![f_i'(x)](https://www.zhihu.com/equation?tex=f_i%27%28x%29)替换掉![d](https://www.zhihu.com/equation?tex=d)中的旧梯度![y_i](https://www.zhihu.com/equation?tex=y_i)，这也就是![d = d - y_i + f_i'(x)](https://www.zhihu.com/equation?tex=d+%3D+d+-+y_i+%2B+f_i%27%28x%29)表达的意思。如此，每次更新的时候仅仅需要计算一个样本的梯度，而不是所有样本的梯度。计算开销与SGD无异，但是内存开销要大得多。[1]中已经证明SAG是一种线性收敛算法，这个速度远比SGD快。
 
@@ -46,7 +44,7 @@ SAG算法在内存中为每个样本都维护一个旧的梯度 $$y_i$$，随机
 
 
 
-## 4. SVRG
+## 3. SVRG
 
 SVRG的算法思路是，每过一段时间计算一次所有样本的梯度![\tilde{\mu}](https://www.zhihu.com/equation?tex=%5Ctilde%7B%5Cmu%7D)，每个阶段内部的单次更新采用![\triangledown \psi_{i_t} (w_{t-1}) - \triangledown \psi_{i_t} (\tilde{w}) + \tilde{\mu}](https://www.zhihu.com/equation?tex=%5Ctriangledown+%5Cpsi_%7Bi_t%7D+%28w_%7Bt-1%7D%29+-+%5Ctriangledown+%5Cpsi_%7Bi_t%7D+%28%5Ctilde%7Bw%7D%29+%2B+%5Ctilde%7B%5Cmu%7D)来更新当前参数，每次更新最多计算两次梯度。相对于SAG来说，不需要在内存中为每个样本都维护一个梯度，也就是说节省了内存资源。此外，SVRG中提出了一个非常重要的概念叫做variance reduction（方差缩减），这个概念需要联系SGD的收敛性分析来理解，在SGD的收敛性分析中需要假设样本梯度的的方差是有常数上界的，然而正是因为这个常数上界导致了SGD无法线性收敛，因此SVRG的收敛性分析中利用![\triangledown \psi_{i_t} (w_{t-1}) - \triangledown \psi_{i_t} (\tilde{w}) + \tilde{\mu}](https://www.zhihu.com/equation?tex=%5Ctriangledown+%5Cpsi_%7Bi_t%7D+%28w_%7Bt-1%7D%29+-+%5Ctriangledown+%5Cpsi_%7Bi_t%7D+%28%5Ctilde%7Bw%7D%29+%2B+%5Ctilde%7B%5Cmu%7D)这种特殊的更新项来让方差有一个可以不断减少的上界，因此也就做到了线性收敛，这一点就是SVRG的核心，SAG的策略其实也与此类似（虽然证明过程不同）。
 
@@ -64,4 +62,18 @@ SVRG的算法思路是，每过一段时间计算一次所有样本的梯度![\t
 
 [3]Defazio, Aaron, Francis Bach, and Simon Lacoste-Julien. "Saga: A fast incremental gradient method with support for non-strongly convex composite objectives." *Advances in Neural Information Processing Systems*. 2014.
 
-<span id="cauchy">here</span>
+## 4. mini-batch SVRG
+
+
+
+
+
+## 5. SVRG for online learning
+
+
+
+## Reference
+
+[1] Cauchy, Augustin. “Méthode générale pour la résolution des systemes d’équations simultanées.” Comp. Rend. Sci. Paris 25.1847 (1847): 536-538.
+
+[2] 
