--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -7,7 +7,7 @@ categories: 算法
 excerpt: SVRG论文阅读笔记
 ---
 
-​	 最佳拜读了下大名鼎鼎的 SVRG 算法，本文做个简单的阅读笔记，并描述了如何将 SVRG 算法改造成一种在线算法，当然我这里不保证改造后算法的各种理论性质。
+最佳拜读了下大名鼎鼎的 SVRG 算法，本文做个简单的阅读笔记，并描述了如何将 SVRG 算法改造成一种在线算法，当然我这里不保证改造后算法的各种理论性质。
 
 * content
 {:toc}
@@ -15,17 +15,23 @@ excerpt: SVRG论文阅读笔记
 ## 1. background
 
 考虑优化问题：
+
 $$
 min \, F(w)=\frac{1}{n}\sum_{i=1}^{n}f_i(w)
 $$
+
 当我们采用 Full Gradient (FG) 的方法时，$$w$$ 的更新公式是：
+
 $$
 w^{(t)}=w^{(t-1)}-\eta_t\nabla F(w^{(t-1)})=w^{(t-1)}-\frac{\eta_t}{n}\sum_{i=1}^{n}\nabla f_{i}(w^{(t-1)})
 $$
+
 Full Gradient (FG) 的方法可以追溯到 Cauchy 1847 年的论文 [[1]](#Reference)。对于凸函数，FG 是次线性收敛 $$O(1/T)$$，对强凸函数可以达到线性收敛 $$O(\rho^T)$$ ，其中 $$0<\rho<1$$（收敛速度是衡量优化算法计算复杂度的基本工具，可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者 [这里](https://zhuanlan.zhihu.com/p/27644403)）。梯度下降对于样本数目比较多的时候有一个很大的劣势，那就是每次需要求解所有样本的梯度，样本数多的时候，导致计算量大增，所以实际生产环境中，往往采用随机梯度下降算法（Stochastic Gradient Descent），一般简写做 SGD，它于 1951 和 1952 年在文献 [15，16] 中被提出。SGD 每次迭代的时候均匀随机得选择一个样本或者 mini-batch 做更新。当我们采用 SGD 方法来进行计算的时候，$$w$$ 的更新公式是
+
 $$
 w^{(t)}=w^{(t-1)}-\eta_t\nabla f_{i_t}(w^{(t-1)})
 $$
+
 相对于梯度下降，SGD 的好处非常明显，就是可以减少每次更新的计算代价，但是 SGD 带来的问题是收敛速度不如梯度下降，也就是说为了达到同样的精度，SGD 需要的总迭代次数要大于梯度下降，但是，单次迭代的计算量要小得多。从收敛速度分析上看，SGD 能够在目标函数强凸并且递减步长的情况下做到 $O(1/T)$ 的次线性收敛（sublinear convergence），而梯度下降则可以在目标函数强凸的情况下做到 $O(\rho^T) (\rho<1)$ 的线性收敛（linear convergence）。总结起来就是，如果想快速得到一个可以勉强接受的解，SGD 比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。
 
 SGD 后来衍生出了非常多的变种，尤其是一类分析 regret 的 online 算法，包括 Adagrad、Dual Averaging、FTRL 等。但是，始终学术界对于 SGD 还有一种期待，就是是否可以把 SGD 做到和梯度下降一样的线性收敛。直到 2012 和 2013 年，SAG[1] 与 SVRG[2] 算法发表在 NIPS 上，**成为近几年 SGD 类算法的最大突破**。
