--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -32,7 +32,7 @@ $$
 w^{(t)}=w^{(t-1)}-\eta_t\nabla f_{i_t}(w^{(t-1)})
 $$
 
-相对于梯度下降，SGD 的好处非常明显，就是可以减少每次更新的计算代价，不过也正是因为每次都是随机的使用一个样本或一个 mini batch 来估计梯度，因此**对梯度估计的方差就大了**。这给 SGD 带来的问题是收敛速度不如梯度下降，也就是说为了达到同样的精度，SGD 需要的总迭代次数要大于梯度下降。从收敛速度分析上看，梯度下降则可以在目标函数强凸的情况下做到 $O(\rho^T) (\rho<1)$ 的线性收敛（linear convergence），在目标函数为凸函数的情况下可以做到次线性收敛 $$O(1/T)$$（收敛速度是衡量优化算法计算复杂度的基本工具，可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者 [这里](https://zhuanlan.zhihu.com/p/27644403)）。而 SGD 能够在目标函数强凸并且递减步长的情况下只做到 $O(1/T)$ 的次线性收敛（sublinear convergence）。至于为什么对梯度估计的方差过大会降低收敛速度，以及 SGD 为什么一定要步长递减，具体原因可参考文章 [[4]](#Reference) 的 Theorem 4.6 和 Theorem 4.7 以及 Theorem 4.8，Theorem 4.9 和 Theorem 4.10，简单来说就是如果步长不是递减的，SGD 会收敛到最优解的一个领域中，对梯度估计的噪声让它最终无法进一步收敛。
+相对于梯度下降，SGD 的好处非常明显，就是可以减少每次更新的计算代价，不过也正是因为每次都是随机的使用一个样本或一个 mini batch 来估计梯度，因此**对梯度估计的方差就大了**。这给 SGD 带来的问题是收敛速度不如梯度下降，也就是说为了达到同样的精度，SGD 需要的总迭代次数要大于梯度下降。从收敛速度分析上看，梯度下降则可以在目标函数强凸的情况下做到 $$O(\rho^T) (\rho<1)$$ 的线性收敛（linear convergence），在目标函数为凸函数的情况下可以做到次线性收敛 $$O(1/T)$$（收敛速度是衡量优化算法计算复杂度的基本工具，可以参考 [wiki](https://en.wikipedia.org/wiki/Rate_of_convergence "Rate_of_convergence") 或者 [这里](https://zhuanlan.zhihu.com/p/27644403)）。而 SGD 能够在目标函数强凸并且递减步长的情况下只做到 $$O(1/T)$$ 的次线性收敛（sublinear convergence）。至于为什么对梯度估计的方差过大会降低收敛速度，以及 SGD 为什么一定要步长递减，具体原因可参考文章 [[4]](#Reference) 的 Theorem 4.6 和 Theorem 4.7 以及 Theorem 4.8，Theorem 4.9 和 Theorem 4.10，简单来说就是如果步长不是递减的，SGD 会收敛到最优解的一个领域中，对梯度估计的噪声让它最终无法进一步收敛。
 
 总结起来就是，如果想快速得到一个可以勉强接受的解，SGD 比梯度下降更加合适，但是如果想得到一个精确度高的解，应当选择梯度下降。SGD 后来衍生出了非常多的变种，尤其是一类分析 regret 的 online 算法，包括 Adagrad、Dual Averaging、FTRL 等。但是是否可以把 SGD 做到和梯度下降一样的线性收敛呢？直到 2012 和 2013 年，SAG[1] 与 SVRG[2] 算法发表在 NIPS 上回答了这个问题，**成为近几年 SGD 类算法的最大突破**。
 
