--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -50,7 +50,7 @@ $$
 
 **SVRG 算法**（这里的 $$\psi$$ 就是上文中的 $$f$$）
 
-![svrg算法](./2018-05-07-SVRG-SVRG.jpg)
+![svrg算法](../my_pics/2018-05-07-SVRG-SVRG.jpg)
 
 SVRG 算法在每一轮迭代的内部有一个内部的迭代，在进行内部迭代前用当前的 $$\tilde w$$ 值计算一次所有样本的平均梯度 $$\tilde\mu$$，内部迭代的初始值被赋予为当前的 $$\tilde w$$，内部迭代中每次的梯度采用如下方式计算：
 
