add an attachment for svrg

--- a/_posts/2018-05-07-SVRG论文阅读笔记.md
+++ b/_posts/2018-05-07-SVRG论文阅读笔记.md
@@ -102,7 +102,7 @@ $$
 
 按照上文对方差缩减方法的描述，对此公式为什么能降低梯度估计的方差就可以有个直观的解释：因为 $$\nabla f_{i_j}(w_k)$$ 的期望就是 $$\nabla R_n(w_k)$$，因此可以将 $$(\nabla f_{i_j}(w_k)-\nabla R_n(w_k))$$ 视为梯度估计 $$\nabla f_{i_j}(w_k)$$ 的 bias，那么在每一次的迭代中，算法都对基于当前参数 $$\tilde w_j$$ 做的梯度估计 $$\nabla f_{i_j}(\tilde w_j)$$ 进行了一次修正。在 SGD 的收敛性分析中，假定了样本梯度的方差是有个常数上界的 (见文章 [[4]](#Reference) 的 Assumption 4.3(c))，正是这个常数上界的存在导致 SGD 算法无法线性收敛，SVRG 利用它新的更新方式可以让估计的梯度方差有个不断减小的上界 (见文章 [[4]](#Reference) 的 Theorem 5.1)，这就是 SVRG 算法的核心思想，这也是为什么这个算法被称为 SVRG（stochastic variance reduced gradient）的原因，SVRG 算法在目标函数光滑和强凸的情况下做到线性收敛速度。更多更为正式更为数学的分析可参考 bottou 大神写的综述文章 [[4]](#Reference)。
 
-SVRG 算法的问题是虽然不用存储所有样本的梯度了，但是计算量上去了，因为它在每次的大迭代里面还有一轮小迭代，每次都要算两遍梯度，整体的计算量已经和 GD 一样了，而且还多一个超参数 $$m$$ 要调。
+SVRG 算法的问题是虽然不用存储所有样本的梯度了，但是计算量上去了，因为它在每次的大迭代里面还有一轮小迭代，每次都要算两遍梯度，整体的计算量已经和 GD 一样了，而且还多一个超参数 $$m$$ 要调。另外，[这里](/media/docs/Lecture5_online_vs_offline_learning_variance_reduction_and_svrg.pdf) 有一个 PPT ，讲的还比较通俗，可以随意看看。
 
 
 
