update matrix dev.

--- a/_posts/2017-12-18-矩阵求导.markdown
+++ b/_posts/2017-12-18-矩阵求导.markdown
@@ -184,7 +184,7 @@ $$
  $$\nabla_{\boldsymbol{w}} l = \boldsymbol{X}^T(\sigma(\boldsymbol{X}\boldsymbol{w}) - \boldsymbol{y})$$，$$\nabla_{\boldsymbol{w}}^2 l = \boldsymbol{X}^T\text{diag}(\sigma'(\boldsymbol{X}\boldsymbol{w}))\boldsymbol{X}$$。
 
 
-**例5【多元 logistic 回归】**：$$l = -\boldsymbol{y}^T\log \mathrm{softmax}(\boldsymbol{Wx})=$$$$-\boldsymbol{y}^T\boldsymbol{Wx}+$$\log(\boldsymbol{1}^T\exp(\boldsymbol{Wx}))$$，求 $$\nabla_{\boldsymbol{W}} l$$ 和 $$\nabla_{\boldsymbol{W}}^2 l$$。
+**例5【多元 logistic 回归】**：$$l = -\boldsymbol{y}^T\log \mathrm{softmax}(\boldsymbol{Wx})=-\boldsymbol{y}^T\boldsymbol{Wx}+\log(\boldsymbol{1}^T\exp(\boldsymbol{Wx}))$$，求 $$\nabla_{\boldsymbol{W}} l$$ 和 $$\nabla_{\boldsymbol{W}}^2 l$$。
 
 **解**：上篇例 3 中已求得 $$\nabla_{\boldsymbol{W}} l = (\mathrm{softmax}(\boldsymbol{Wx})-\boldsymbol{y})\boldsymbol{x}^T$$。为求 $$\nabla_{\boldsymbol{W}}^2 l$$，先求微分：定义 $$\boldsymbol{a} = \boldsymbol{Wx}，\mathrm{d}\mathrm{softmax}(\boldsymbol{a}) = \frac{\exp(\boldsymbol{a})\odot \mathrm{d}\boldsymbol{a}}{\boldsymbol{1}^T\exp(\boldsymbol{a})} - \frac{\exp(\boldsymbol{a}) (\boldsymbol{1}^T(\exp(\boldsymbol{a})\odot \mathrm{d}\boldsymbol{a}))}{(\boldsymbol{1}^T\exp(\boldsymbol{a}))^2}$$，这里需要化简去掉逐元素乘法，第一项中 $$\exp(\boldsymbol{a})\odot \mathrm{d}\boldsymbol{a} = \mathrm{diag}(\exp(\boldsymbol{a})) \mathrm{d}\boldsymbol{a} $$，第二项中 $$\boldsymbol{1}^T(\exp(\boldsymbol{a})\odot \mathrm{d}\boldsymbol{a}) = \exp(\boldsymbol{a})^T\mathrm{d}\boldsymbol{a}$$，故有 $$\mathrm{d}\mathrm{softmax}(\boldsymbol{a}) = \mathrm{softmax}'(\boldsymbol{a})\mathrm{d}\boldsymbol{a}$$，其中
  $$\mathrm{softmax}'(\boldsymbol{a}) = \frac{\mathrm{diag}(\exp(\boldsymbol{a}))}{\boldsymbol{1}^T\exp(\boldsymbol{a})} - \frac{\exp(\boldsymbol{a})\exp(\boldsymbol{a})^T}{(\boldsymbol{1}^T\exp(\boldsymbol{a}))^2} $$，代入有 $$\mathrm{d}\nabla_{\boldsymbol{W}} l = \mathrm{softmax}'(\boldsymbol{a})\mathrm{d}\boldsymbol{a}\boldsymbol{x}^T = \mathrm{softmax}'(\boldsymbol{Wx})\mathrm{d}\boldsymbol{Wx}\boldsymbol{x}^T$$，做向量化并使用矩阵乘法的技巧，得到 $$\nabla_{\boldsymbol{W}}^2 l = (\boldsymbol{x}\boldsymbol{x}^T) \otimes \mathrm{softmax}'(\boldsymbol{Wx})$$。
