--- a/_posts/2018-05-17-广告实时反馈CTR特征的正确使用方法.md
+++ b/_posts/2018-05-17-广告实时反馈CTR特征的正确使用方法.md
@@ -68,7 +68,7 @@ $$
 \end{align*}
 $$
 
-其中的 $$\Psi(x)=\frac{\mathrm{d}}{\mathrm{d}x}\mathrm{ln}\Gamma(x)$$ 是 digamma 函数，可以通过 Bernardo 算法进行计算，当然也可以参考另一篇文章 [这里](www.baidu.com) 进行快速的数值计算。最后通过 fixed-point interation (Minka, 2013) 方法可以得到如下的迭代公式：
+其中的 $$\Psi(x)=\frac{\mathrm{d}}{\mathrm{d}x}\mathrm{ln}\Gamma(x)$$ 是 digamma 函数，可以通过 Bernardo 算法进行计算，当然也可以参考另一篇文章 [这里](http://caoxiaoqing.github.io/2016/07/23/%E5%8F%8C%E4%BC%BD%E9%A9%AC%E5%87%BD%E6%95%B0%E7%9A%84%E6%95%B0%E5%80%BC%E8%AE%A1%E7%AE%97/) 进行快速的数值计算。最后通过 fixed-point interation (Minka, 2013) 方法可以得到如下的迭代公式：
 
 $$
 \begin{align*}
@@ -90,3 +90,5 @@ $$
 2 [广告点击率的贝叶斯平滑](https://blog.csdn.net/mytestmy/article/details/19088519)
 
 3 [Wang, Xuerui, et al. "Click-through rate estimation for rare events in online advertising." *Online Multimedia Advertising: Techniques and Technologies*. IGI Global, 2011. 1-12.](/media/docs/Click-Through Rate Estimation for Rare Events in Online Advertising.pdf)
+
+4 [http://caoxiaoqing.github.io/2016/07/23/双伽马函数的数值计算](http://caoxiaoqing.github.io/2016/07/23/%E5%8F%8C%E4%BC%BD%E9%A9%AC%E5%87%BD%E6%95%B0%E7%9A%84%E6%95%B0%E5%80%BC%E8%AE%A1%E7%AE%97/)
