--- a/_posts/2017-08-02-tair框架介绍.md
+++ b/_posts/2017-08-02-tair框架介绍.md
@@ -129,7 +129,7 @@ tair 提供了两种生成对照表的策略：
 
 2、位置安全优先，一般我们通过控制 \_pos\_mask（tair的一个配置项）来使得不同的机房具有不同的位置信息，一个桶的各份数据不能都位于相同的一个位置（不在同一个机房）。
 
-位置优先策略还有一个问题，假如只有两个机房，机房 1 中有 100 台 data server，机房 2 中只有 1 台 data server。这个时候，机房 2 中 data server 的压力必然会非常大，于是这里产生了一个控制参数 \_build\_diff\_ratio（参见安装部署文档），当机房差异比率大于这个配置值时，config server 也不再 build 新表，机房差异比率是如何计出来的呢？首先找到机器最多的机房，不妨设机房 1 的 data server 数量是 $$SA$$，那么其余的 data server 的数量记做 $$SB$$，则机房差异比率=$$|SA-SB|/SA$$，因为一般我们线上系统配置的 COPY COUNT = 3，在这个情况下，不妨设只有两个机房 RA 和 RB，那么两个机房什么样的 data server 数量是均衡的范围呢? 当差异比率小于 0.5 的时候是可以做到各台 data server 负载都完全均衡的。这里有一点要注意，假设 RA 机房有机器 6 台，RB 有机器 3 台，那么差异比率 = 6 - 3 / 6 = 0.5，这个时候如果进行扩容，在机房 RA 增加一台 data server，扩容后的差异比率 = 7 - 3 / 7 = 0.57，也就是说，只在机器数多的机房增加 data server 会扩大差异比率。如果我们的 \_build\_diff\_ratio配置值是 0.5，那么进行这种扩容后，config server 会拒绝再继续 build 新表。
+位置优先策略还有一个问题，假如只有两个机房，机房 1 中有 100 台 data server，机房 2 中只有 1 台 data server。这个时候，机房 2 中 data server 的压力必然会非常大，于是这里产生了一个控制参数 \_build\_diff\_ratio（参见安装部署文档），当机房差异比率大于这个配置值时，config server 也不再 build 新表，机房差异比率是如何计出来的呢？首先找到机器最多的机房，不妨设机房 1 的 data server 数量是 $$SA$$，那么其余的 data server 的数量记做 $$SB$$，则机房差异比率=$$\vert SA-SB\vert/SA$$，因为一般我们线上系统配置的 COPY COUNT = 3，在这个情况下，不妨设只有两个机房 RA 和 RB，那么两个机房什么样的 data server 数量是均衡的范围呢? 当差异比率小于 0.5 的时候是可以做到各台 data server 负载都完全均衡的。这里有一点要注意，假设 RA 机房有机器 6 台，RB 有机器 3 台，那么差异比率 = 6 - 3 / 6 = 0.5，这个时候如果进行扩容，在机房 RA 增加一台 data server，扩容后的差异比率 = 7 - 3 / 7 = 0.57，也就是说，只在机器数多的机房增加 data server 会扩大差异比率。如果我们的 \_build\_diff\_ratio配置值是 0.5，那么进行这种扩容后，config server 会拒绝再继续 build 新表。
 
 ## 5. 一致性和可靠性
 
