--- a/_posts/2017-08-02-tair框架介绍.md
+++ b/_posts/2017-08-02-tair框架介绍.md
@@ -4,7 +4,7 @@ title:  "tair框架介绍"
 date:   2017-08-02 00:00:00
 author: caoxiaoqing
 categories: 工具
-tags: 在线学习 参数服务器 PS 
+tags: tair 参数服务器 PS 
 ---
 
 * content
