add from mc to mcmc

--- a/_posts/2017-01-20-从蒙特卡洛(MC)方法到马尔可夫蒙特卡洛(MCMC)方法.md
+++ b/_posts/2017-01-20-从蒙特卡洛(MC)方法到马尔可夫蒙特卡洛(MCMC)方法.md
@@ -9,7 +9,7 @@ tags: 算法 蒙特卡洛 马尔可夫
 
 * content
 {:toc}
-MC 指的是 Monte Carlo，MCMC 这个词中，第一个 MC 指的是 Markov Chain，第二个 MC 指的是 Monte Carlo。本文档旨在用通俗的语言描述 MC 和 MCMC 的基本思想和方法，并且受限于我的知识水平，文档中可能有很多不准确的措辞和描述。因此，读者若是追求数学层次上完全准确的算法原理，应该参考相关的专业书籍。本文的 pdf 版本在[这里](/media/docs/从MC到MCMC.pdf)。
+MC 指的是 Monte Carlo，MCMC 这个词中，第一个 MC 指的是 Markov Chain，第二个 MC 指的是 Monte Carlo。本文档旨在用通俗的语言描述 MC 和 MCMC 的基本思想和方法，并且受限于我的知识水平，文档中可能有很多不准确的措辞和描述。因此，读者若是追求数学层次上完全准确的算法原理，应该参考相关的专业书籍。本文的 pdf 版本在[这里](/media/docs/从MC到MCMC.pdf)。另外还有大牛写的[科普读物](/media/docs/An Introduction to MCMC for Machine Learning.pdf)。
 
 
 
