--- a/_posts/2018-01-18-《白夜行》编年史.markdown
+++ b/_posts/2018-01-18-《白夜行》编年史.markdown
@@ -19,137 +19,159 @@ tags: 读书笔记
 
 
 
-**1973年    桐原亮司11岁小学5年级，西本雪穗11岁小学5年级（故事开始） **
+#### 1973年    
 
-10月 桐原洋介死亡 
-11月 寺崎忠夫死亡
-12月 笹垣润三发现破旧大楼门的疑点
+桐原亮司11岁小学5年级，西本雪穗11岁小学5年级(故事开始) 
 
-同年 松浦离开桐原当铺
+- 10月 桐原洋介死亡 
+- 11月 寺崎忠夫死亡
+- 12月 笹垣润三发现破旧大楼门的疑点
+- 同年 松浦离开桐原当铺
 
-**1974年**    桐原亮司12岁小学6年级，西本雪穗12岁小学6年级
-5月22日16点 西本文代被发现死亡
+#### 1974年  
 
-笹垣润三开始对西本雪穗产生怀疑
+ 桐原亮司12岁小学6年级，西本雪穗12岁小学6年级
 
-**1975年**    桐原亮司（Kirihara Ryouji）13岁初中1年级，西本雪穗13岁初中1年级
+- 5月22日16点 西本文代被发现死亡
+- 笹垣润三开始对西本雪穗产生怀疑
 
-（西本雪穗被唐泽礼子收养，改名为唐泽雪穗（Karasawa Yukiho））
+#### 1975年 
 
-**1977年**    桐原亮司15岁初中3年级，唐泽雪穗15岁初中3年纪
+桐原亮司（Kirihara Ryouji）13岁初中1年级，西本雪穗13岁初中1年级
 
-川岛江利子与唐泽雪穗开始同班
+- 西本雪穗被唐泽礼子收养，改名为唐泽雪穗（Karasawa Yukiho）
 
-夏季 藤村都子事件发生
+#### 1977年
 
-同年 亮司离开桐原当铺
+桐原亮司15岁初中3年级，唐泽雪穗15岁初中3年纪
 
-**1979年**    桐原亮司17岁高中2年级，唐泽雪穗17岁高中2年级
-6月 亮司与园村友彦结识
-7月9日 夕子意外死亡
-7月9日20点 友彦找到亮司商量对策
-7月9日21点 亮司开始解决夕子事件，雪穗接到电话
-7月9日22点 雪穗被补习老师中道正晴发现接电话后偷偷出门
-7月10日14点 夕子尸体被发现
-7月12日 警方开始调查友彦
-7月17日 夕子丈夫找到友彦
+- 川岛江利子与唐泽雪穗开始同班
+- 夏季 藤村都子事件发生
+- 同年 亮司离开桐原当铺
 
-8月12日 亮司开始创办“无限企划”
+#### 1979年
 
-**1980年**    桐原亮司18岁高中毕业（毕业后离家出走），唐泽雪穗18岁高中毕业
+桐原亮司17岁高中2年级，唐泽雪穗17岁高中2年级
 
-**1981年**    桐原亮司19岁，唐泽雪穗19岁大学1年级
+- 6月 亮司与园村友彦结识
+- 7月9日 夕子意外死亡
+- 7月9日20点 友彦找到亮司商量对策
+- 7月9日21点 亮司开始解决夕子事件，雪穗接到电话
+- 7月9日22点 雪穗被补习老师中道正晴发现接电话后偷偷出门
+- 7月10日14点 夕子尸体被发现
+- 7月12日 警方开始调查友彦
+- 7月17日 夕子丈夫找到友彦
+- 8月12日 亮司开始创办“无限企划”
 
-4月10日 开学，雪穗和江利子加入社交舞团，高宫城（大四）认识雪穗
+#### 1980年
 
-4月24日 雪穗与亮司见面，莜冢带江利子去美容院 
-4月28号 雪穗接触到社交舞社的银行卡
-5月12日 社交舞团银行卡被取走十二万
-5月14日 江利子事件发生
-5月22日 筱冢接到要求付款电话
+桐原亮司18岁高中毕业（毕业后离家出走），唐泽雪穗18岁高中毕业
 
-5月25日 社交舞团银行卡被取走十三万
+#### 1981年
 
-**1982年**    桐原亮司20岁，唐泽雪穗20岁大学2年级，高宫城被分配到东西电装东京总公司专利部（应该是实习），友彦 
+桐原亮司19岁，唐泽雪穗19岁大学1年级
 
-打工时认识女友弘惠
-3月12日 友彦冒充女性使用假银行卡取钱
-3月13日 奈美江被亮司和友彦藏在酒店中
+- 4月10日 开学，雪穗和江利子加入社交舞团，高宫城（大四）认识雪穗
+- 4月24日 雪穗与亮司见面，莜冢带江利子去美容院 
+- 4月28号 雪穗接触到社交舞社的银行卡
+- 5月12日 社交舞团银行卡被取走十二万
+- 5月14日 江利子事件发生
+- 5月22日 筱冢接到要求付款电话
+- 5月25日 社交舞团银行卡被取走十三万
 
-3月16日 奈美江死亡
+#### 1982年
 
-**1983年**    桐原亮司21岁，唐泽雪穗21岁（向高宫城谎称自己怀孕）
+桐原亮司20岁，唐泽雪穗20岁大学2年级
 
-**1984年**    桐原亮司22岁（开始经营个人电脑商店MUGEN，Memorix公司成立），唐泽雪穗22岁
+- 高宫城被分配到东西电装东京总公司专利部（应该是实习）
+- 友彦打工时认识女友弘惠
+- 3月12日 友彦冒充女性使用假银行卡取钱
+- 3月13日 奈美江被亮司和友彦藏在酒店中
+- 3月16日 奈美江死亡
 
-**1985年**    桐原亮司23岁，高宫雪穗23岁大学毕业（与高宫城结婚，改名为高宫雪穗）
-7月 高宫城感觉到自己电话被窃听器监听
-10月 高宫城与三泽千都留相识，高宫城与雪穗结婚
-12月 亮司在自己的个人电脑商店遇到松浦，准备盗版《超级马里奥兄弟》
-雪穗开始进入股票市场
+#### 1983年
 
-12月31日 《超级马里奥兄弟》盗版失败，亮司将个人电脑商店托付给有彦后再无联系
+桐原亮司21岁，唐泽雪穗21岁（向高宫城谎称自己怀孕）
 
-**1986年**    桐原亮司24岁（化名为秋吉雄一进入Memorix公司担任主任研发员），高宫雪穗24岁
-6月 雪穗与高宫城第一次吵架，雪穗声称除了基金以为的所有股票全部脱手，实际上并没有
+#### 1984年
 
-9月 雪穗开始进入服装业，开设精品店“R&Y”
+桐原亮司22岁（开始经营个人电脑商店MUGEN，Memorix公司成立），唐泽雪穗22岁
 
-**1987年**    桐原亮司25岁，高宫雪穗25岁,高宫城成为南青山店房东
+#### 1985年
 
-2月 高宫城所在的东西电装东京总公司专家系统遭到复制
+桐原亮司23岁，高宫雪穗23岁大学毕业（与高宫城结婚，改名为高宫雪穗）
 
-**1988年**    桐原亮司26岁，唐泽雪穗26岁（与高宫城离婚，改回原来的名字）
-4月初 亮司调查三泽千都留到老鹰高尔夫球场
-4月11日 高宫城所在的东西电装东京总公司发现专家系统被盗，今枝当时所属的东京综合研究公司受到委托前往调查
-4月23日 高宫城再次遇到三泽千都留，之后双方一直见面
-7月13日 雪穗与高宫城再次吵架，高宫城酒醉误伤雪穗（应该是酒里面被下药）
-7月14日 雪穗前往意大利出差
-7月15日 高宫城与三泽千都留婚外情正式开始
-7月23日 雪穗回到日本
+- 7月 高宫城感觉到自己电话被窃听器监听
+- 10月 高宫城与三泽千都留相识，高宫城与雪穗结婚
+- 12月 亮司在自己的个人电脑商店遇到松浦，准备盗版《超级马里奥兄弟》
+- 雪穗开始进入股票市场
+- 12月31日 《超级马里奥兄弟》盗版失败，亮司将个人电脑商店托付给有彦后再无联系
 
-8月 雪穗与高宫城离婚（离婚的时间是猜测的，我估计这个计划应该不会拖太久）
+#### 1986年
 
-**1989年**    桐原亮司27岁，唐泽雪穗27岁，今枝直巳开设侦探事务所
+桐原亮司24岁（化名为秋吉雄一进入Memorix公司担任主任研发员），高宫雪穗24岁
 
-**1991年**    桐原亮司29岁，唐泽雪穗29岁
-4月 亮司开始跟踪观察药剂师栗原典子
-5月 今枝与高宫城在老鹰高尔夫球场相遇
-亮司与典子相识，不久后开始同居 
-6月27日 莜冢委托今枝调查唐泽雪穗
-7月 今枝对唐泽雪穗展开全面调查
+- 6月 雪穗与高宫城第一次吵架，雪穗声称除了基金以为的所有股票全部脱手，实际上并没有
+- 9月 雪穗开始进入服装业，开设精品店“R&Y”
 
-亮司从Memorix公司离职
+#### 1987年
 
-亮司与典子同居
+- 桐原亮司25岁，高宫雪穗25岁，高宫城成为南青山店房东
+- 2月 高宫城所在的东西电装东京总公司专家系统遭到复制
 
-8月中旬 今枝的临时助手菅原绘里遭到窃听
+#### 1988年
 
-笹垣润三找到今枝，今枝得知秋吉雄一就是桐原亮司
+桐原亮司26岁，唐泽雪穗26岁（与高宫城离婚，改回原来的名字）
 
-亮司从典子处得到氰化钾
+- 4月初 亮司调查三泽千都留到老鹰高尔夫球场
+- 4月11日 高宫城所在的东西电装东京总公司发现专家系统被盗，今枝当时所属的东京综合研究公司受到委托前往调查
+- 4月23日 高宫城再次遇到三泽千都留，之后双方一直见面
+- 7月13日 雪穗与高宫城再次吵架，高宫城酒醉误伤雪穗（应该是酒里面被下药）
+- 7月14日 雪穗前往意大利出差
+- 7月15日 高宫城与三泽千都留婚外情正式开始
+- 7月23日 雪穗回到日本
+- 8月 雪穗与高宫城离婚（离婚的时间是猜测的，我估计这个计划应该不会拖太久）
 
-8月20日 今枝中毒死亡
-9月上旬 雪穗养母唐泽礼子蛛网膜出血在大坂住院
-笹垣找到莜冢
-9月18日 亮司与典子前往大坂 
-9月19日 唐泽礼子死亡
-9月20日 莜冢到达大坂参加唐泽礼子葬礼
+#### 1989年
 
-10月以后 筱冢药品的内部资料遭到泄露
+桐原亮司27岁，唐泽雪穗27岁，今枝直巳开设侦探事务所
 
-**1992年**    桐原亮司30岁，莜冢雪穗30岁（与莜冢康晴结婚，改姓莜冢）
-春季 美佳第一次见到雪穗
-9月前2周 亮司离开典子
-9月 典子找到今枝事务所（此时事务所由绘里照看）请求调查亮司下落
-莜冢从“筱冢药品”调理至“SH油脂”
-10月10日 莜冢康晴与唐泽雪穗结婚
-11月 笹垣找到莜冢成一，将所有的事都一一说明
-笹垣找到典子询问亮司下落
-莜冢美佳事件发生
-12月中旬 笹垣与莜冢成一找到莜冢康晴，说明雪穗往事，并查出筱冢药品的内部资料泄露是亮司所为
-从大坂带回来的盆栽里面发现了松浦的眼睛片
-笹垣再次拜访桐原弥生子，解开很多心结
-12月31日 “R&Y”大坂店开业
+#### 1991年
 
-**桐原亮司死亡（1962-1992，享年30岁，故事结束）**
+桐原亮司29岁，唐泽雪穗29岁
+
+- 4月 亮司开始跟踪观察药剂师栗原典子
+- 5月 今枝与高宫城在老鹰高尔夫球场相遇
+- 亮司与典子相识，不久后开始同居 
+- 6月27日 莜冢委托今枝调查唐泽雪穗
+- 7月 今枝对唐泽雪穗展开全面调查
+- 亮司从Memorix公司离职
+- 亮司与典子同居
+- 8月中旬 今枝的临时助手菅原绘里遭到窃听
+- 笹垣润三找到今枝，今枝得知秋吉雄一就是桐原亮司
+- 亮司从典子处得到氰化钾
+- 8月20日 今枝中毒死亡
+- 9月上旬 雪穗养母唐泽礼子蛛网膜出血在大坂住院
+- 笹垣找到莜冢
+- 9月18日 亮司与典子前往大坂 
+- 9月19日 唐泽礼子死亡
+- 9月20日 莜冢到达大坂参加唐泽礼子葬礼
+- 10月以后 筱冢药品的内部资料遭到泄露
+
+#### 1992年
+
+桐原亮司30岁，莜冢雪穗30岁（与莜冢康晴结婚，改姓莜冢）
+
+- 春季 美佳第一次见到雪穗
+- 9月前2周 亮司离开典子
+- 9月 典子找到今枝事务所（此时事务所由绘里照看）请求调查亮司下落
+- 莜冢从“筱冢药品”调理至“SH油脂”
+- 10月10日 莜冢康晴与唐泽雪穗结婚
+- 11月 笹垣找到莜冢成一，将所有的事都一一说明
+- 笹垣找到典子询问亮司下落
+- 莜冢美佳事件发生
+- 12月中旬 笹垣与莜冢成一找到莜冢康晴，说明雪穗往事，并查出筱冢药品的内部资料泄露是亮司所为
+- 从大坂带回来的盆栽里面发现了松浦的眼睛片
+- 笹垣再次拜访桐原弥生子，解开很多心结
+- 12月31日 “R&Y”大坂店开业
+- 桐原亮司死亡(1962-1992，享年30岁，故事结束)
