--- a/_posts/2017-08-02-tair框架介绍.md
+++ b/_posts/2017-08-02-tair框架介绍.md
@@ -25,31 +25,31 @@ tags: tair 参数服务器 PS
 
 **config server 的功能**
 
-1) 通过维护和 data server 心跳来获知集群中存活节点的信息；
-2) 根据存活节点的信息来构建数据在集群中的分布表；
-3) 提供数据分布表的查询服务；
-4) 调度 data server 之间的数据迁移、复制。
+- 1) 从配置文件中 load 进节点的信息，根据配置的数据分布的桶的数量和需要建立的数据的备份数，以及根据存活节点的信息来构建数据在集群中的分布表，这个表实际上就是一个数组，元素为数据存储节点的信息，长度为桶数乘以数据的备份数；
+- 2) 负责对数据节点故障检测，通过维护和 data server 心跳来获知集群中存活节点的信息，当数据节点发生变化 (如增加服务器)，就会把上面所描述的数据分布表发送给数据节点；
+- 3) 提供数据分布表的查询服务；
+- 4) 调度 data server 之间的数据迁移、复制。
 
 **data server 的功能**
 
-1) 提供存储引擎；
-2) 接受 client 的 put/get/remove 等操作；
-3) 执行数据迁移，复制等；
-4) 插件：在接受请求的时候处理一些自定义功能；
-5) 访问统计。
+- 1) 提供存储引擎；
+- 2) 接受 client 的 put/get/remove 等操作；
+- 3) 执行数据迁移，复制等，根据数据分布表，把负责的主桶的数据发送到对应的备份桶所在节点；
+- 4) 插件：在接受请求的时候处理一些自定义功能；
+- 5) 访问统计。
 
 **invalid server 的功能**
 
-1) 接收来自 client 的 invalid/hide 等请求后，对属于同一组的集群（双机房独立集群部署方式）做 delete/hide 操作，保证同一组集群的一致；
-2) 集群断网之后的，脏数据清理；
-3) 访问统计。
+- 1) 接收来自 client 的 invalid/hide 等请求后，对属于同一组的集群（双机房独立集群部署方式）做 delete/hide 操作，保证同一组集群的一致；
+- 2) 集群断网之后的，脏数据清理；
+- 3) 访问统计。
 
 **client 的功能**
 
-1) 在应用端提供访问 tair 集群的接口；
-2) 更新并缓存数据分布表和 invalid server 地址等；
-3) Local Cache，避免过热数据访问影响 tair 集群服务；
-4) 流控。
+- 1) 在应用端提供访问 tair 集群的接口；
+- 2) 更新并缓存数据分布表和 invalid server 地址等；
+- 3) Local Cache，避免过热数据访问影响 tair 集群服务；
+- 4) 流控。
 
 ## 2. 一些基本概念
 
