add curveball algorithm

--- a/_posts/2018-05-17-广告实时反馈CTR特征的正确使用方法.md
+++ b/_posts/2018-05-17-广告实时反馈CTR特征的正确使用方法.md
@@ -59,8 +59,25 @@ P(C_1,...,C_N\vert I_1,...I_N,\alpha,\beta)&=\prod_{i=1}^{N}p(C_i\vert I_i,\alph
 \end{align*}
 $$
 
-为了求得似然函数的最大值，对上式取对数得到对数似然函数后再分别对 $$\alpha$$ 和 $$\beta$$ 求导：
+#### 3.1 矩估计
 
+为了求得 $$\alpha$$ 和 $$\beta$$，我们也可以用简单的矩估计来算。因为我们已经假定每个广告的 CTR 服从参数为 $$\alpha$$ 和 $$\beta$$ 的 Beta 分布，那么我们让总体的原点矩估等于样本的原点矩，即可解出参数。
+
+$$mean=E(r)=\frac{\alpha}{\alpha+\beta}$$
+
+$$var=D(r)=\frac{\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}$$
+
+所以
+
+$$\alpha=[mean*(1-mean)/var-1]*mean$$
+
+$$\beta=[mean*[1-mean]/var-1]*(1-mean)$$ 
+
+
+
+#### 3.2 Fixed-point ineration
+
+为了求得似然函数的最大值，对上面的似然函数取对数得到对数似然函数后再分别对 $$\alpha$$ 和 $$\beta$$ 求导：
 $$
 \begin{align*}
 \frac{\mathrm{d}\mathrm{log}P(C_1,...,C_N\vert I_1,...I_N,\alpha,\beta)}{\mathrm{d}\alpha}&=\sum_{i=1}^N[\Psi(\alpha+\beta)-\Psi(I_i+\alpha+\beta)+\Psi(C_i+\alpha)-\Psi(\alpha)] \\
@@ -77,11 +94,21 @@ $$
 \end{align*}
 $$
 
-通过上述迭代公式迭代计算得到 $$\alpha=\hat\alpha$$ 和 $$\beta=\hat\beta$$ 后，即可用于平滑广告的点击率了：
+初始值可以用矩估计的方式得到，然后通过上述迭代公式迭代计算得到 $$\alpha=\hat\alpha$$ 和 $$\beta=\hat\beta$$ 后，即可用于平滑广告的点击率了：
 
 $$
 r_i=\frac{C_i+\hat\alpha}{I_i+\hat\alpha+\hat\beta}
 $$
+
+一些分析见参考文章[5]
+
+
+
+#### 3.3 EM 算法
+
+见参考文章[5]
+
+
 
 ## Reference
 
@@ -92,3 +119,5 @@ $$
 3 [Wang, Xuerui, et al. "Click-through rate estimation for rare events in online advertising." *Online Multimedia Advertising: Techniques and Technologies*. IGI Global, 2011. 1-12.](/media/docs/Click-Through Rate Estimation for Rare Events in Online Advertising.pdf)
 
 4 [http://caoxiaoqing.github.io/2016/07/23/双伽马函数的数值计算](http://caoxiaoqing.github.io/2016/07/23/%E5%8F%8C%E4%BC%BD%E9%A9%AC%E5%87%BD%E6%95%B0%E7%9A%84%E6%95%B0%E5%80%BC%E8%AE%A1%E7%AE%97/)
+
+5 [CTR预估中的贝叶斯平滑方法（二）参数估计](http://www.cnblogs.com/bentuwuying/p/6498370.html)
