update second derivate of mlp

--- a/_posts/2018-06-09-神经网络的二阶导推导.md
+++ b/_posts/2018-06-09-神经网络的二阶导推导.md
@@ -11,7 +11,7 @@ tags: 求导
 {:toc}
 练练手，强推神经网络的二阶导。
 
-本文推导内容的 pdf 链接：[点我](../media/docs/second derivative of MLP/second derivative of MLP.pdf)
+本文推导内容的 pdf 链接：[点我](/media/docs/second derivative of MLP/second derivative of MLP.pdf)
 
 
 
